--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://my.remotefalcon.com/remoteFalcon" />
+            <iframe width="100%" height="100%" frameborder="0" src="https://CHANGEME.remotefalcon.com/remoteFalcon" />
         </div>
     </body>
 </html>
